sortering funker fortsatt ikkje på den forhanslange listen